--- a/Code.rmd
+++ b/Code.rmd
@@ -82,3 +82,16 @@ B1 <- ggplotly(B1)
 B1
 
 ```
+
+#ridge plot code (can change variables)
+``` {r}
+library(ggridges)
+
+ggplot(gym, aes(x = Calories_Burned, y = Group, fill = stat(quantile)))+
+  stat_density_ridges(quantile_lines = FALSE,
+                      calc_ecdf = TRUE,
+                      geom = "density_ridges_gradient",
+                      quantiles = c(0.05, 0.95)) +
+  scale_fill_manual(name = "Probability", values = c("#E2FFF2", "white", "#B0E0E6"),
+                    labels = c("(0, 5%]", "(5%, 95%]", "(95%, 1]"))
+```
